# python-project-lvl2

./: .gitignore  Hexlet_second_project.ipynb  Makefile  README.md  Untitled.ipynb  build_diff.py  constants.py  gendiff.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
files_for_tests/: answer_json.txt  answer_r_plain.txt  file2_r.yml
gen_diff/: build_diff.py  gendiff.py
gen_diff/formaters/: json.py  plain.py  stylish.py
gendiff/: __init__.py  build_diff.py  gendiff.py  get_args.py
gendiff/formaters/: format_diff.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: fixture.py  test_generate_diff.py  test_json.py
tests/fixtures/: answer_r_json.txt  answer_r_stylish.txt  file1_r.yml
