[tool.poetry]
name = "hexlet-code"
version = "0.0.0"
description = "Second project"
authors = ["Renata_Mutalova <41615@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff:main"

