[tool.poetry]
name = "hexlet-code"
version = "0.0.0"
description = "Second project"
authors = ["Renata_Mutalova <41615@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.3.1"
install = "^1.3.4"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

